# rex

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/actions/build-docker/: action.yml
.github/actions/setup-rust/: action.yml
.github/scripts/: publish_report.sh
.github/workflows/: daily_reports.yml  main_docker_publish.yml  pr_lint_gha.yml  pr_lint_pr_title.yml  pr_main.yml  pr_main_cli.yml  pr_main_sdk.yml  publish.yml  tag_release.yaml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  common.rs  lib.rs  utils.rs  verify.rs
cli/src/commands/: frame.rs  l2.rs  mod.rs  wallet.rs
cli/tests/: tests.rs
sdk/: Cargo.toml
sdk/examples/: simple_usage.rs
sdk/examples/keystore/: main.rs
sdk/src/: authorize.rs  calldata.rs  create.rs  errors.rs  keystore.rs  privileged_transaction_data.rs  sdk.rs  sign.rs  utils.rs
sdk/src/client/: mod.rs
sdk/src/client/eth/: block_override.rs  clients.rs  errors.rs  eth_sender.rs  mod.rs  state_override.rs
sdk/src/l2/: authorize.rs  constants.rs  deposit.rs  fees.rs  l1_to_l2_tx_data.rs  mod.rs  privileged_transaction_data.rs  withdraw.rs
sdk/tests/: tests.rs
