[workspace]
members = ["cli", "sdk"]
default-members = ["cli"]
resolver = "3"

[workspace.package]
version = "17.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/lambdaclass/rex"
authors = ["Lambdaclass"]

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "warn"

[workspace.lints.clippy]
panic = "deny"
unnecessary_cast = "warn"
deref_by_slicing = "warn"
indexing_slicing = "warn"
manual_unwrap_or = "warn"
manual_unwrap_or_default = "warn"
as_conversions = "deny"
unwrap_used = "deny"
expect_used = "deny"
arithmetic_side_effects = "deny"
overflow_check_conditional = "warn"
manual_saturating_arithmetic = "warn"

[workspace.dependencies]
rex-cli = { path = "cli" }
rex-sdk = { path = "sdk" }

ethrex-common = "17.0.0"
ethrex-blockchain = "17.0.0"
ethrex-rlp = "17.0.0"
ethrex-rpc = "17.0.0"
ethrex-l2-rpc = "17.0.0"
ethrex-sdk = "17.0.0"
ethrex-l2-common = "17.0.0"

keccak-hash = "0.11.0"
thiserror = "2.0.11"
hex = "0.4.3"
secp256k1 = { version = "0.30.0", default-features = false, features = [
  "global-context",
  "recovery",
  "rand",
] }
rayon = "1.10.0"
